--- a/src/components/Main Navbar/MainNavbar.css
+++ b/src/components/Main Navbar/MainNavbar.css
@@ -12,6 +12,13 @@
   margin-right: 10px;
 }
 
+.navbar-toggler {
+  border: none !important;
+  border-radius: unset !important;
+  font-size: 15px !important;
+  padding-right: 0 !important;
+}
+
 @media only screen and (max-width: 1190px) {
   .link-space {
     margin-right: 0;
@@ -26,10 +33,33 @@
   }
 }
 
+@media only screen and (max-width: 900px) and (min-width: 500px) {
+  .main-navbar-text-size {
+    width: 768px !important;
+  }
+}
+
 @media only screen and (max-width: 900px) {
   .main-text-margin-style {
       padding-left: 1rem !important;
       padding-right: 1rem !important;
-    }
+  }
+
+  .main-navbar-text-size {
+    position: fixed !important;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1030;
+    background: white;
+    width: 425px;
+    margin-top: 2.6rem !important;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .icon-style {
+    height: 23px !important;
+  }
 }
 
