--- a/src/components/Product Quantity Purchase/ProductPurchase.css
+++ b/src/components/Product Quantity Purchase/ProductPurchase.css
@@ -51,6 +51,10 @@
   padding-left: 0 !important;
 }
 
+.divider-style {
+  border-top: 2px solid !important;
+}
+
 @media only screen and (max-width: 1190px) and (min-width: 600px) {
   .product-text-margin-style {
     padding-left: 2rem !important;
@@ -72,7 +76,14 @@
   }
 
   .divider-style {
-    margin-top: 0.5rem;
+    position: fixed !important;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1030;
+    margin-top: 6.2rem !important;
+    border-top: 1px solid !important;
+    width: 768px !important;
   }
 }
 
@@ -85,6 +96,10 @@
   .modal-dialog-centered {
     margin: 2rem auto !important;
     width: 85% !important;
+  }
+
+  .divider-style {
+    width: 425px !important;
   }
 }
 
